--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/themes": "^2.0.3",
     "@tanstack/react-query": "^5.24.8",
     "class-variance-authority": "^0.7.0",
